--- a/Webserver/views/Home.ejs
+++ b/Webserver/views/Home.ejs
@@ -19,7 +19,7 @@
     <script defer src="js/FC3_Quantity.js"></script>
 
     <script>
-        var socket = io("http://localhost:3000") // IP tĩnh (hoặc IP động, hoặc localhost)
+        var socket = io("http://127.0.0.1:5000") // IP tĩnh (hoặc IP động, hoặc localhost)
     </script>
 
     <!-- ////////////// CHƯƠNG TRÌNH ĐĂNG NHẬP HỆ THỐNG //////////////  -->
